# immich-photo-manager

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .plugin-scanner.toml  PERSONAL-CHANGELOG.md  PERSONAL-CLAUDE.md  README.md  SECURITY.md  WORKFLOW.md  _commit-and-rebuild.sh  _run-once-credential-update.sh  _run-once-makedirs-fix.sh  build-plugin.sh  glama.json  go.mod  immich.go  main.go  pyproject.toml  run-mcp-server.sh  sync-upstream.sh  test-lmstudio-mcp.py  test-mcp.py
.claude-plugin/: marketplace.json  mcp.json  plugin.json
.claude/commands/: photos-rotate.md  photos-update-gps-radius.md  photos-update-locations.md  photos-update-people.md
.claude/context/: demo-context.md
assets/: demo-script.md  demo.html  index-template.html  serve.sh  viewer-template.html
commands/: cleanup.md  create-album.md  immich-status.md  my-travels.md  setup-immich-photo-manager.md  setup.md
deploy/: com.immich-mcp.plist.example  nginx-immich-mcp.conf.example
doc/: ARCHITECTURE.md  CORS-SETUP.md  DEMO-GPS-INFERENCE.md  DEMO-SYSTEM.md  GETTING-STARTED.md  MCP-TOOLS.md  PLUGIN-INSTALL-GUIDE.md  PROMPT-DROLOSOFT-DEMO.md  SKILLS.md  WEB-FIXES-TODO.md
doc/demos/: README.md  (+9 more)
scripts/: capture-screenshots.js  create_geographic_albums.py  create_shared_links.py  discover_locations.py  make-gif.py  record-demo.js  setup-mcp.sh
src/: requirements.txt
user_docs/: postgres-recovery.md
user_scripts/: create_date_album.py  fix_missing_dates.py  fix_missing_gps.py  rotate_queue_albums.py  update_gps_radius_albums.py  update_location_albums.py  update_people_albums.py
(+26 files in other folders)
