[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immich-photo-manager"
version = "1.3.0"
description = "MCP server for intelligent photo management with Immich"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Drolosoft" },
]
keywords = ["immich", "mcp", "photos", "photo-management"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.24.0,<1.0",
  "mcp>=1.0.0,<2.0",
  "uvicorn>=0.24.0,<1.0",
]

[project.urls]
Homepage = "https://github.com/drolosoft/immich-photo-manager"
Documentation = "https://github.com/drolosoft/immich-photo-manager/blob/main/doc/GETTING-STARTED.md"
Issues = "https://github.com/drolosoft/immich-photo-manager/issues"

[project.scripts]
immich-photo-manager = "immich_mcp_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/immich_mcp_server"]
